clean up now unused classes, reorder EMI/REI/JEI ingredient uses in UI just to be sure